Implemented android login page

--- a/src/main/resources/_config-android.properties
+++ b/src/main/resources/_config-android.properties
@@ -1,11 +1,14 @@
 #### MOBILE - android
 #
 capabilities.automationName=uiautomator2
-capabilities.browserName=NULL
+#capabilities.browserName=NULL
 capabilities.platformName=ANDROID
 capabilities.deviceType=phone
-#capabilities.app=https://qaprosoft.s3-us-west-2.amazonaws.com/carinademoexample.apk
-#capabilities.deviceName=<phone_name>
+capabilities.app=https://github.com/saucelabs/sample-app-mobile/releases/download/2.7.1/Android.SauceLabs.Mobile.Sample.app.2.7.1.apk
+capabilities.appPackage=com.swaglabsmobileapp
+#capabilities.appPackage=com.swaglabsmobileapp.MainApplication
+capabilities.appActivity=.SplashActivity
+capabilities.deviceName=emulator-5554
 #capabilities.udid=<phone_udid>
 #
 #### extra properties for debugging
