--- a/src/main/resources/_config-ios.properties
+++ b/src/main/resources/_config-ios.properties
@@ -4,9 +4,9 @@ capabilities.platformName=iOS
 capabilities.automationName=XCUITest
 capabilities.browserName=NULL
 capabilities.deviceType=phone
-#capabilities.app=https://qaprosoft.s3-us-west-2.amazonaws.com/carinademoexample.zip
-#capabilities.deviceName=<simulator_name>
-#capabilities.platformVersion=<simulator_platform_version>
+capabilities.app=https://github.com/saucelabs/sample-app-mobile/releases/download/2.7.1/iOS.Simulator.SauceLabs.Mobile.Sample.app.2.7.1.zip
+capabilities.deviceName=iPhone 15 Pro Max
+capabilities.platformVersion=17.5
 #capabilities.udid=
 #
 #### extra properties for debugging
