WIP commit for review

--- a/src/main/resources/_config-android.properties
+++ b/src/main/resources/_config-android.properties
@@ -13,4 +13,4 @@ capabilities.deviceName=emulator-5554
 #
 #### extra properties for debugging
 # wait 10 minutes instead of default minute for new command
-#capabilities.newCommandTimeout=600
+capabilities.newCommandTimeout=600
